# tinysegmenter-hs

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cabal.project  tinysegmenter.cabal
bench/: Main.hs
src/Text/: Score.hs  TinySegmenter.hs
src/Text/TinySegmenter/: ByteString.hs  Model.hs  Score.hs  Text.hs
src/Text/TinySegmenter/ByteString/: Lazy.hs
test/: Bench.hs  Main.hs  Test.hs
