cabal-version:       >=1.10

name:                tinysegmenter
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             BSD3
license-file:        LICENSE
author:              Shota Arakaki
maintainer:          syotaa1@gmail.com
copyright:           2019 Shota Arakaki
category:            Text
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Text.TinySegmenter
  other-modules:       Text.TinySegmenter.Score
  other-extensions:    RecordWildCards
  ghc-options:         -Wall
  build-depends:       base >=4.12 && <4.13
                     , transformers
                     , text == 1.2.*
                     , vector
                     , deepseq
  hs-source-dirs:      src
  default-language:    Haskell2010

benchmark bench
  hs-source-dirs:      bench
  main-is:             Main.hs
  type:                exitcode-stdio-1.0
  ghc-options:         -O2
  build-depends:       base >=4.12 && <4.13
                     , text
                     , tinysegmenter
                     , criterion
  default-language:    Haskell2010
