cabal-version:       >=1.10

name:                tinysegmenter
version:             0.1.0.0
synopsis:            Haskell implementation of tinysegmenter, a compact Japanese tokenizer
description:
    Machine lerning based compact Japanese tokenizer library.
    Original library is written in JavaScript by Taku Kudo <http://chasen.org/~taku/software/TinySegmenter>

homepage:            https://github.com/ecofighter/tinysegmenter-hs
bug-reports:         https://github.com/ecofighter/tinysegmenter-hs/issues
license:             BSD3
license-file:        LICENSE
author:              Shota Arakaki
maintainer:          syotaa1@gmail.com
copyright:           2019 Shota Arakaki
category:            Text
build-type:          Simple
extra-source-files:  CHANGELOG.md
                     Text.TinySegmenter.Model.hs

library
  exposed-modules:     Text.TinySegmenter.Text
                       Text.TinySegmenter.ByteString
                       Text.TinySegmenter.ByteString.Lazy
  -- other-modules:       Text.TinySegmenter.Model
  other-extensions:    RecordWildCards
                       BangPatterns
                       MultiWayIf
                       CPP
  ghc-options:         -Wall
  build-depends:       base >=4.12 && <4.13
                     , transformers
                     , text == 1.2.*
                     , bytestring == 0.10.*
                     , vector
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite test
  hs-source-dirs:      test
  main-is:             Test.hs
  type:                exitcode-stdio-1.0
  ghc-options:         -threaded -O0
  build-depends:       base >=4.12 && <4.13
                     , text
                     , bytestring
                     , tinysegmenter
  default-language:    Haskell2010

benchmark bench
  hs-source-dirs:      test
  main-is:             Bench.hs
  type:                exitcode-stdio-1.0
  ghc-options:         -threaded -O2 -fllvm
  build-depends:       base >=4.12 && <4.13
                     , text
                     , bytestring
                     , tinysegmenter
                     , criterion
  default-language:    Haskell2010
